tests/NormalTests/paczka1/fuzzy1/78931283.err
Error in line 5: GC4vC A806 40,8
Error in line 10: GC4vC A820 64,9
Error in line 11: 6wWXElYZB A257 25,6
Error in line 12: 5gdFL A820 37,3
Error in line 24: Qqm9BC6xB A820 46,2
